--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  @apply bg-zinc-600;
+}
 .nav-link {
     position: relative;
     text-decoration: none;
-    color: inherit;
+    
   }
   
   .nav-link::after {
